--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,34 @@
+# ??????? ??
+# spring.thymeleaf.cache=false
 
+#DB connect setting
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521/orcl
+#spring.datasource.username=jdj
+#spring.datasource.password=jdj
+
+#korean language support encoding
+#server.servlet.encoding.charset=UTF-8
+#server.servlet.encoding.enabled=true
+#server.servlet.encoding.force=true
+
+#vo location
+#mybatis.type-aliases-package=com.coin.kimp.vo
+
+#xml location
+#mybatis.mapper-locations=classpath:mappers/**/*.xml
+
+#embedded tomcat server port
+# server.port=8080
+#server.servlet.session.timeout=60m
+#server.servlet.session.cookie.name=PROJECT_JESSIONID
+#server.port=8443
+#server.ssl.enabled=true
+#server.ssl.key-alias=spring
+#server.ssl.key-store=keystore.p12
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-password=spring
+#server.http2.enabled=true
+
+#server.servlet.session.cookie.secure=true
+#server.servlet.session.cookie.http-only=true
